# hangman-multiplayer-game

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  hmg  hmg-client  hmg-server  pyproject.toml  requirements-dev.txt  run_tests  setup.cfg
.github/workflows/: github-ci.yml
src/hmg/: client.py  display.py  game.py  hangman.py  server.py  socket.py  ui.py  word_utils.py
tests/: test_display.py  test_game.py  test_hangman.py  test_ui.py  test_word_utils.py
