[metadata]
name = hmg
description = A simple Hangman Multiplayer Game by CLI in python!
long_description = file: README.md
author = Rodrigo Acosta
author_gmail = rodrigoacosta444@gmail.com

[options]
packages = find:
package_dir =
	= src
scripts = hmg-client, hmg-server
install_requires =
    requests
    rich

[options.extras_require]
dev = pytest; pytest-cov; black; flake8

[options.packages.find]
where = src
