[metadata]
name = hmg
version = 0.0.1
description = A simple Hangman Multiplayer Game by CLI in python!
long_description = file: README.md
author = Rodrigo Acosta
author_gmail = rodrigoacosta444@gmail.com


[options]
packages = find:
package_dir =
	= src
scripts = hmg

[options.packages.find]
where = src
